--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,714 @@
-html,
+a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, button, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, input, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, textarea, tfoot, th, thead, time, tr, tt, u, ul, var, video
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    -webkit-box-sizing:  border-box;
+    -moz-box-sizing:  border-box;
+    border-collapse:  collapse;
+    line-height: inherit;
+    vertical-align: inherit;
+    font-family: inherit;
+}
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    --black: 0, 0, 0;
+    --gray: 192, 192, 192;
+    --light_gray: 170, 170, 170;
+    --white: 255, 255, 255;
+    --red: 228, 107, 93;
+    --yellow: 255, 165, 0;
+    --green: 126, 226, 126;
+    
+    --main: 17, 136, 187;
+    color-scheme: light;
+    --accent: 17, 136, 187;
+    --text: 32, 33, 36;
+    --accent-text: 232, 234, 237;
+    --text-level-1: 96, 97, 100;
+    --text-level-2: 128, 129, 132;
+    --text-level-3: 176, 177, 180;
+    --background: 237, 237, 237;
+  
+    --level-1: 249, 249, 249;
+    --level-2: 249, 249, 249;
+  
+    --input: 192, 192, 192;
+    --menu-background: 152, 154, 157;
+  
+    --shadow: .1rem .1rem 1rem rgba(0, 0, 0, .2);
+    --hover: 0, 0, 0;
+    --bright: brightness(0);
+    --visited: #800080;
+}
+body.dark {
+    --gray: 82, 82, 82;
+    --red: 250, 128, 114;
+    --yellow: 255, 140, 0;
+    --green: 114, 196, 114;
+    
+    --main: 98, 205, 254;
+    color-scheme: dark;
+    --accent: 98, 205, 254;
+    --text: 237, 237, 237;
+    --accent-text: 32, 33, 36;
+    --text-level-1: 168, 170, 173;
+    --text-level-2: 136, 138, 141;
+    --text-level-3: 88, 90, 93;
+    --background: 32, 33, 36;
+  
+    --level-1: 48, 49, 52;
+    --level-2: 64, 65, 68;
+  
+    --input: 192, 192, 192;
+    --menu-background: 60, 60, 60;
+  
+    --shadow: 0 0 0 #000;
+    --hover: 168, 170, 173;
+    --bright: brightness(20);
+    --visited: 244, 164, 255;
+}
+
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
+html {
+    /* 1rem == 10px */
+    --scale: 62.5%;
+    font-size: var(--scale);
+    height: 100%;
+    scroll-behavior: smooth;
+    overflow: overlay;
+    scroll-snap-type: y proximity;
+}
+
+body {
+    background-color: rgb(var(--background));
+    color: rgb(var(--text));
+    font-size: 1.5rem;
+    transition: background-color .5s;
+    padding: 5rem 0;
+    vertical-align: middle;
+    line-height: 1.2;
+    font-family: NotoSans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+@font-face {
+    font-family: 'NotoSans';
+    font-weight: normal;
+    src: url('/fonts/NotoSansKR-Regular.woff2') format('woff2');
+}
+@font-face {
+    font-family: 'NotoSans';
+    font-weight: bold;
+    src: url('/fonts/NotoSansKR-Bold.woff2') format('woff2');
+}
+
+h3 {
+    font-size: 2rem;
+}
+
+ul,
+ol,
+li {
+    list-style: none;
+}
+
 a {
-  color: inherit;
-  text-decoration: none;
+    text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+img{
+    width: auto; 
+    filter: brightness(1);
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+label, summary{
+    cursor: pointer;
+}
+
+.left {
+    text-align: left;
+}
+
+.right {
+    text-align: right;
+}
+
+.center {
+    text-align: center;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.rows, .cols {
+    display: flex;
+}
+
+.cols {
+    flex-direction: column;
+}
+
+.space-between {
+    justify-content: space-between;
+}
+
+.flex-main {
+    flex: 1;
+}
+
+.container {
+    max-width: 120rem;
+    text-align: center;
+    margin-left: auto; margin-right: auto;
+    justify-content: center;
+    align-items: center;
+}
+
+.container._50 {
+    max-width: 50rem;
+}
+
+.container._100 {
+    max-width: 100rem;
+}
+
+.container .title {
+    font-size: 3.6rem;
+    margin-left: 2.5rem;
+    text-align: left;
+}
+@media screen and (min-width: 0) and (max-width: 920px)  {
+    .container .title {
+        font-size: 3rem;
+        margin-left: 1rem;
+    }
+}
+
+.list-wrap > li > h3 {
+    padding: 1.5rem 1.5rem .5rem;
+}
+
+.list {
+    background-color: rgb(var(--level-1));
+    border-radius: 2rem;
+    overflow: hidden;
+}
+
+.list li {
+    border-bottom: 1px solid rgb(var(--gray));
+    padding: 1.3rem 1.5rem;
+    transition: .2s;
+    display: flex;
+    align-items: center;
+}
+
+.list li.pointer {
+    cursor: pointer;
+}
+
+.list li:is(.detail, .toggle, .picker) {
+    padding: 0 1.5rem;
+    gap: 2rem;
+}
+
+.list li:is(.detail, .toggle, .picker) span {
+    margin: 1.3rem 0;
+}
+
+.list li.detail span:nth-child(2) {
+    color: rgb(var(--text-level-1));
+}
+
+.list li.detail span:nth-child(3) {
+    cursor: pointer;
+    margin-left: auto;
+    color: rgb(var(--text-level-2));
+}
+
+.list li.toggle .toggle-button {
+    margin-left: auto;
+}
+
+.list li.picker label {
+    margin-left: auto;
+}
+
+.list li.picker input {
+    background: none;
+    margin: 0;
+}
+
+.list li:last-child {
+    border: none;
+}
+
+.list li:hover {
+    background-color: rgb(var(--hover), .2);
+}
+
+.left-slide-menu {
+    position: relative;
+    align-self: stretch;
+    display: flex;
+    align-items: center;
+}
+
+.left-slide-menu .menu-button {
+    position: relative;
+}
+
+.left-slide-menu .menu-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    pointer-events: none;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translateX(100%);
+    height: 100%;
+    word-break: keep-all;
+    padding: 1rem;
+    transition: .25s;
+    background-color: rgb(var(--menu-background), .6);
+    backdrop-filter: blur(5px);
+}
+
+.left-slide-menu .menu-button:hover ~ .menu-list,
+.menu-list:hover {
+    pointer-events: all;
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.menu-button {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    cursor: pointer;
+    border-radius: 1rem;
+    transition: all .25s;
+}
+
+.menu-button:hover {
+  box-shadow: var(--shadow);
+  background-color: rgb(var(--hover), .2);
+}
+
+.menu-button .line {
+    width: 3rem;
+    height: .3rem;
+    border-radius: 1rem;
+    background-color: rgb(var(--text));
+    display: block;
+    margin: .25rem;
+    filter: var(--bright);
+    transition: .4s ease-in-out;
+}
+
+.dim {
+    pointer-events: all;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .2);
+    z-index: 100;
+}
+
+.toast-wrap {
+    position: fixed;
+    bottom: 7rem;
+    right: 1rem;
+    z-index: 102;
+    display: flex;
+    flex-direction: column-reverse;
+    box-shadow: var(--shadow);
+    border-radius: 1rem;
+    overflow: hidden;
+}
+
+@keyframes toast_show {
+    from    {
+        opacity: 0;
+        transform: translateX(100%);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes toast_hide {
+    from {
+        opacity: 1;
+        transform: translateX(0);
+    }
+    to {
+        opacity: 0;
+        transform: translateX(100%);
+    }
+}
+
+.toast{
+    min-width: 20rem;
+    padding: 2rem 1rem;
+    background-color: rgb(var(--level-1));
+    transition: .25s;
+    text-align: center;
+    font-weight: bold;
+    color: rgb(var(--text));
+    animation: toast_show 250ms ease-out;
+    white-space: pre-line;
+}
+
+.toast:hover {
+    background-color: rgb(var(--hover), .2);
+}
+
+.toast.hide {
+    animation: toast_hide 250ms ease-out;
+}
+
+@keyframes alert_show {
+    from {
+        opacity: 0;
+        transform: translatey(100%);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes alert_hide {
+    from {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    to {
+        opacity: 0;
+        transform: translateY(100%);
+    }
+}
+
+.alert-wrap {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: .5rem;
+    z-index: 102;
+    text-align: center;
+    font-weight: bold;
+}
+
+.alert {
+    max-width: 100rem;
+    width: 100%;
+    padding: 1.75rem 1rem;
+    color: rgb(var(--white));
+    background-color: rgba(var(--red), .7);
+    backdrop-filter: blur(3px);
+    border-radius: 1rem;
+    transition: .25s;
+    animation: alert_show 250ms ease-out;
+    white-space: pre-line;
+}
+
+.alert.hide {
+    animation: alert_hide 250ms ease-out;
+}
+
+.loading {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 102;
+}
+
+.loading > div {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.loading span {
+    display: inline-block;
+    width: 7.5rem;
+    height: 7.5rem;
+    border: 1rem solid rgb(var(--text-level-2));
+    border-radius: 50%;
+    border-top-color: rgb(var(--accent));
+    animation: spin .75s ease-in-out infinite;
+    -webkit-animation: spin .75s ease-in-out infinite;
+}
+
+@keyframes spin {
+    to {-webkit-transform: rotate(360deg);}
+}
+@-webkit-keyframes spin {
+    to {-webkit-transform: rotate(360deg);}
+}
+
+.logo {
+    height: 5rem;
+    padding: 1.2rem;
+    filter: var(--bright);
+}
+
+.button{
+    width: auto;
+    color: rgb(var(--text));
+    border: none;
+    padding: 1.5rem 2.5rem;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.5rem;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: .75rem;
+    background-color: rgb(var(--level-2));
+    transition: .25s;
+}
+
+.button:hover {
+    box-shadow: var(--shadow);
+    background-color: rgb(var(--hover), .2) !important;
+}
+
+.button.delete {
+    background-color: rgb(var(--red));
+}
+
+.toggle-button {
+    position: relative;
+    background-color: grey;
+    width: 4rem;
+    height: 2.2rem;
+    border-radius: 1.6rem;
+}
+
+.toggle-button.active {
+    background-color: rgb(var(--accent));
+}
+
+.toggle-button .slider {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: .3rem;
+    height: 1.6rem;
+    width: 1.6rem;
+    background-color: white;
+    border-radius: 12px;
+    transition: .25s;
+}
+
+.toggle-button.active .slider {
+    left: calc(100% - .3rem - 1.6rem);
+}
+
+.input-text,
+.textarea {
+    border: none;
+    color: rgb(var(--text));
+    width: 37.5rem;
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin: 1rem 0;
+    outline: .2rem solid #00000000;
+    padding: 1.5rem;
+    border-radius: .5rem;
+    background-color: rgba(var(--input), .3);
+    text-align: left;
+    transition: .25s;
+}
+
+input[type=number] {
+    width: 5.5rem;
+    padding: 1rem 0 1rem 1rem;
+    margin: 1rem .2rem;
+}
+
+input[type=number].year {
+    width: 8rem;
+    padding: 1rem 0 1rem 1rem;
+}
+
+:is(
+    .input-text,
+    input[type=number],
+    textarea,
+    .textarea
+)::placeholder {
+    color: rgb(var(--text));
+}
+
+:is(
+    .input-text,
+    input[type=number],
+    textarea,
+    .textarea
+):hover {
+    box-shadow: var(--shadow) inset;
+    background-color: rgba(var(--hover), .1) !important;
+}
+
+:is(
+    .input-text,
+    input[type=number],
+    textarea,
+    .textarea
+):focus {
+    box-shadow: 0 0 0 .2rem rgb(var(--main)) inset;
+}
+
+.accent{
+    color: rgb(var(--accent-text));
+    background-color: rgb(var(--accent));
+}
+.accent-text{
+    color: rgb(var(--accent));
+}
+
+
+.close_button,
+.edit_button {
+    width: 5rem;
+    height: 5rem;
+    border-radius: .5rem;
+    padding: 1rem;
+    cursor: pointer;
+    background: none;
+    background-repeat: no-repeat;
+    background-size: 4rem;
+    background-position: center;
+    border: none;
+    filter: var(--bright);
+    transition: .25s;
+}
+
+:is(
+    .close_button,
+    .edit_button
+):hover {
+    box-shadow: var(--shadow);
+    background-color: rgb(var(--hover), .2);
+}
+
+.close_button {
+    height: 4rem;
+    background-image: url('/icons/x.svg');
+}
+
+.edit_button {
+    width: 3rem;
+    height: 3rem;
+    background-size: 2rem;
+    background-image: url('/icons/edit.svg');
+}
+
+#modal-wrap {
+    pointer-events: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal {
+    pointer-events: all;
+    min-width: 20rem;
+    min-height: 6rem;
+    position: absolute;
+    font-weight: bold;
+    word-break: keep-all;
+    padding: 1.5rem;
+    border-radius: 2rem;
+    box-shadow: var(--shadow);
+    background-color: rgb(var(--background));
+    z-index: 101;
+    animation: modal_show 100ms ease-out;
+}
+
+.modal--title {
+    margin: 0 5rem;
+    text-align: center;
+    font-size: 2.4rem;
+}
+
+.modal.main {
+    width: 40rem;
+}
+
+.modal.big {
+    min-width: 60rem;
+    max-width: 80rem;
+}
+
+@keyframes modal_show {
+    from {
+        transform: scale(1.2);
+    }
+    to {
+        transform: scale(1);
+    }
+}
+
+.modal--content {
+    margin-top: 1rem;
+    text-align: center;
+}
+
+.modal form {
+    margin-top: 1rem;
+}
+
+.modal .close_button {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+}
+
+.modal--bottom-menu-box {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    margin: 1rem 0;
+}
+
+.modal--bottom-menu-box span {
+    cursor: pointer;
+}
+
+.modal.modal .button.main {
+    margin-top: 1rem;
+}
+
+.modal.modal :is(
+    .input-text:is([type=text], [type=password]),
+    .button.main
+) {
+    width:100% !important;
 }
