--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -20,6 +20,7 @@
     width: 100%;
     border-radius: 1rem;
     background-color: var(--menu-background);
+    backdrop-filter: blur(3px);
 }
 
 .item {
