--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -52,3 +52,13 @@
     display: flex;
     align-items: center;
 }
+
+.setting {
+    width: 5rem;
+    height: 5rem;
+    padding: 1rem !important;
+}
+
+.setting img {
+    filter: var(--bright);
+}
