--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,7 +36,7 @@ body {
     --input: rgba(192, 192, 192, .3);
     --menu-background: #ffffff88;
   
-    --shadow: .1rem .1rem 1rem (0, 0, 0, .2);
+    --shadow: .1rem .1rem 1rem rgba(0, 0, 0, .2);
     --hover: rgba(0, 0, 0, .2);;
     --bright: brightness(0);
     --visited: #800080;
@@ -91,7 +91,7 @@ body {
     color: var(--text);
     font-size: 1.5rem;
     transition: background-color .5s;
-    padding: 5rem 0;
+    padding: 7rem 0;
     vertical-align: middle;
     line-height: 1.2;
     font-family: NotoSans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -547,7 +547,7 @@ label, summary{
 }
 
 .logo {
-    height: 5rem;
+    height: 5.2rem;
     padding: 1.2rem;
     filter: var(--bright);
 }
