--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -9,6 +9,7 @@
     padding: .5rem;
     font-size: 1.6rem;
     font-weight: bold;
+    user-select: none;
 }
 
 .dropdown li {
@@ -21,21 +22,30 @@
     border-radius: 1rem;
     background-color: var(--menu-background);
     backdrop-filter: blur(3px);
+    box-shadow: var(--shadow);
 }
 
 .item {
     display: flex;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
-    border-radius: .5rem;
+    border-radius: 1rem;
     transition: .25s;
+    padding: 1.4rem 2.5rem;
+    user-select: none;
+}
+
+.top .item {
+    height: 100%;
 }
 
 .item.home {
     padding: 0 .5rem;
 }
 
-.item:not(.home) {
-    padding: 1.4rem 2.5rem;
+.item.all_menu {
+    padding: 1.4rem;
 }
 
 .item:hover {
@@ -45,17 +55,101 @@
 .top_menu_bar {
     display: flex;
     justify-content: space-between;
-    align-items: center;
 }
 
 .top_menu_bar :is(.left, .right) {
     display: flex;
+}
+
+.top_menu_bar :is(.left, .right) > li:not(.dropdown) {
+    display: flex;
+}
+
+@media screen and (min-width: 0px) and (max-width: 720px) {
+    .top_menu_bar .left .item:not(.all_menu) {
+        display: none;
+    }
+}
+
+.side {
+    position: fixed;
+    z-index: 100;
+    left: -100%;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    transition: left .4s;
+    font-size: 1.8rem;
+}
+
+.side.on {
+    left: 0;
+}
+
+.side .dim {
+    position: absolute;
+    background-color: rgba(0, 0, 0, .8);
+    z-index: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: .25s;
+}
+
+.side .menus {
+    z-index: 1;
+    width: 18rem;
+    display: flex;
+    justify-content: center;
     align-items: center;
+    flex-direction: column;
+}
+
+.side .menus li {
+    width: 100%;
+}
+
+.side .item:hover {
+    background-color: #80808066;
+}
+
+.side .dropdown ul {
+    width: 100%;
+    z-index: 2;
+}
+
+.side .close_button {
+    position: absolute;
+    top: 1rem !important;
+    right: 1rem !important;
+    left: auto !important;
+    filter: none !important;
+    z-index: 1;
+}
+
+.side .home {
+    margin: 1rem 0 2rem 0;
+}
+
+.side .home:hover {
+    background: none;
+}
+
+.side .home img {
+    padding: .85rem;
+    filter: none !important;
+}
+
+.side :is(.item, .item > *) {
+    color: white;
 }
 
 .setting {
-    width: 5rem;
-    height: 5rem;
+    width: 5.2rem;
+    height: 5.2rem;
     padding: 1rem !important;
 }
 
