--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -36,13 +36,32 @@
     user-select: none;
 }
 
-.top .item {
+.top li:not(.home) .item {
     height: 100%;
 }
 
-.item.home {
-    padding: 0 .5rem;
+.home .item {
+    padding: 1.4rem 1.5rem;
 }
+
+.user_profile_wrap {
+    display: flex;
+    align-items: center;
+    padding: 0;
+    height: 100%;
+}
+
+.user_profile_wrap span {
+    margin-left: 1.25rem;
+}
+
+.user_profile_wrap img {
+    padding: .75rem;
+    margin-right: .5rem;
+    width: 5.2rem;
+    height: 5.2rem;
+}
+
 
 .item.all_menu {
     padding: 1.4rem;
@@ -131,6 +150,8 @@
 }
 
 .side .home {
+    display: flex;
+    justify-content: center;
     margin: 1rem 0 2rem 0;
 }
 
@@ -139,6 +160,7 @@
 }
 
 .side .home img {
+    cursor: pointer;
     padding: .85rem;
     filter: none !important;
 }
@@ -154,5 +176,6 @@
 }
 
 .setting img {
+    width: 3rem;
     filter: var(--bright);
 }
