--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -5,6 +5,7 @@
     flex-direction:column;
     justify-content:center;
     align-items:center;
+    padding: 1rem;
 }
 
 .quick_menu_list {
@@ -39,8 +40,12 @@
     padding: .75rem;
 }
 
-.icon:not(.no_filter) {
+.icon:not(.user_icon) {
     filter: var(--bright);
+}
+
+.user_icon {
+    padding: .5rem;
 }
 
 .user_info {
@@ -49,4 +54,109 @@
 
 .user_name {
     font-size: 2.2rem;
+}
+
+/* 가로 메뉴 */
+@media screen and (min-height: 0px) and (max-height: 600px) {
+    .quick_menu_section {
+        padding-top: 5rem;
+    }
+
+    .quick_menu_list {
+        row-gap: 2rem;
+        column-gap: 3rem;
+    }
+    
+    .menu {
+        gap: 1.5rem;
+        padding: 1.5rem;
+        font-size: 2rem;
+    }
+
+    .icon {
+        width: 4rem;
+        height: 4rem;
+        padding: .5rem;
+    }
+
+    .user_info {
+        font-size: 1.4rem;
+    }
+
+    .user_name {
+        font-size: 1.8rem;
+    }
+}
+
+@media screen and (min-height: 0px) and (max-height: 400px) {
+    .quick_menu_section {
+        justify-content: end;
+        padding: 1rem;
+    }
+
+    .quick_menu_list {
+        row-gap: 1.5rem;
+        column-gap: 2rem;
+    }
+    
+    .menu {
+        gap: 1.5rem;
+        padding: 1rem;
+        font-size: 1.8rem;
+    }
+
+    .icon {
+        width: 3.5rem;
+        height: 3.5rem;
+        padding: .5rem;
+    }
+
+    .user_info {
+        font-size: 1.4rem;
+    }
+
+    .user_name {
+        font-size: 1.8rem;
+    }
+}
+
+/* 세로 메뉴 */
+@media screen and (min-width: 0px) and (max-width: 780px) {
+    .quick_menu_list {
+        column-gap: 2rem;
+    }
+}
+
+@media screen and (min-width: 0px) and (max-width: 750px) and (min-height: 600px) {
+    .quick_menu_section {
+        padding-top: 5rem;
+    }
+    
+    .quick_menu_list {
+        grid-template-columns: 1fr;
+        row-gap: 1rem;
+    }
+
+    .menu {
+        padding: 1.75rem 2.5rem;
+        font-size: 2rem;
+    }
+
+    .icon {
+        width: 3rem;
+        height: 3rem;
+        padding: .25rem;
+    }
+
+    .user_icon {
+        padding: 0;
+    }
+
+    .user_info {
+        font-size: 1.4rem;
+    }
+
+    .user_name {
+        font-size: 1.8rem;
+    }
 }
