Add: 시간표 현재시간에 따라 자동 스크롤 및 수업시간 사이에 쉬는시간 표시

--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -38,10 +38,11 @@
     width: 5rem;
     height: 5rem;
     padding: .75rem;
+    filter: var(--bright);
 }
 
-.icon:not(.user_icon) {
-    filter: var(--bright);
+.icon.user_icon {
+    filter: none;
 }
 
 .user_icon {
