--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,7 +31,7 @@ body {
     --modal-background: #ededed;
   
     --level-1: #f9f9f9;
-    --level-2: #f9f9f9;
+    --level-2: #dcdcdc;
 
     --input: rgba(192, 192, 192, .3);
     --menu-background: #ffffff88;
@@ -177,6 +177,10 @@ label, summary{
 
 .flex-main {
     flex: 1;
+}
+
+.gray {
+    color: gray;
 }
 
 .container {
@@ -716,6 +720,10 @@ input[type=number].year {
     background-color: var(--hover);
 }
 
+.icon {
+    filter: var(--bright);
+}
+
 .close_button {
     height: 4rem;
     background-image: url('/icons/x.svg');
@@ -731,6 +739,7 @@ input[type=number].year {
 #modal-wrap {
     pointer-events: none;
     position: fixed;
+    z-index: 99;
     top: 0;
     left: 0;
     width: 100%;
