--- a/styles/timetable.module.css
+++ b/styles/timetable.module.css
@@ -114,7 +114,7 @@
     top: 50%;
     left: 1rem;
     transform: translateY(-50%);
-    background-color: var(--menu-background);
+    background-color: var(--level-2);
     cursor: pointer;
     font-size: 2rem;
     font-weight: bold;
@@ -134,4 +134,30 @@
 .select_day li.active {
     background-color: var(--accent);
     color: var(--background);
+}
+
+.select_box {
+    position: fixed;
+    z-index: 2;
+    top: calc(50% - 13rem);
+    right: 1rem;
+    display: flex;
+    gap: 1rem;
+}
+
+@media screen and (min-width: 0) and (max-width: 750px) {
+    .select_day {
+        top: auto;
+        bottom: 1rem;
+    }
+
+    .select_box {
+        top: auto;
+        bottom: 1rem;
+    }
+
+    .select_box ul {
+        bottom: 100%;
+        transform: translateY(1.5rem);
+    }
 }
