--- a/styles/meister/ranking.module.css
+++ b/styles/meister/ranking.module.css
@@ -46,8 +46,15 @@
 
 .student_info {
     display: flex;
+    align-items: center;
     gap: 1rem;
     font-weight: bold;
+}
+
+.student_info span:nth-child(3) {
+    color: var(--text-level-2);
+    font-size: 1.6rem;
+    cursor: pointer;
 }
 
 .score_info {
