ADD: 마이스터 랭킹 공유 설정 쿨타임

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -481,6 +481,7 @@ label, summary{
     color: var(--text);
     animation: toast_show 250ms ease-out;
     white-space: pre-line;
+    cursor: pointer;
 }
 
 .toast:hover {
