--- a/styles/meal.module.css
+++ b/styles/meal.module.css
@@ -10,7 +10,7 @@
 .meals {
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: calc(50% + 5rem);
     transform: translate(-50%, -50%);
     width: 115%;
     display: flex;
@@ -20,7 +20,7 @@
 .meals li {
     font-size: 1.3rem;
     flex: 1;
-    padding: 1rem .5rem;
+    padding: 1.5rem .5rem;
     min-height: 25rem;
     pointer-events: all;
     cursor: pointer;
@@ -34,8 +34,8 @@
     width: 100%;
     height: 100%;
     padding: 2rem;
-    background-color: var(--level-1);
-    box-shadow: var(--shadow);
+    box-shadow: var(--shadow-level-1);
+    filter: grayscale(.3);
     border-radius: 2rem;
     opacity: .65;
     transition: .2s;
@@ -49,7 +49,8 @@
 .meals li:hover {
     transform: scale(1.25);
     flex: 1.25;
-    padding: 0 7.5rem;
+    padding: 0 2rem;
+    margin: 0 5rem;
 }
 
 .meals:not(:hover) li.center > div,
@@ -65,8 +66,14 @@
     background-color: var(--yellow-level-1);
 }
 
-.meals li.date_color_2 > div {
-    background-color: var(--green-level-1);
+body:global(.dark)
+.meals li.date_color_0 > div {
+    background-color: var(--level-1);
+}
+
+body:global(.dark)
+.meals li.date_color_1 > div {
+    background-color: var(--level-3);
 }
 
 .content {
@@ -82,4 +89,24 @@
     top: -4rem;
     left: 50%;
     transform: translateX(-50%);
+}
+
+@media screen and (min-width: 0) and (max-width: 750px) {
+    .meals {
+        width: 150%;
+    }
+
+    .meals:not(:hover) li.center,
+    .meals li:hover {
+        margin: 0 3%;
+    }
+}
+
+@media screen and (min-height: 0) and (max-height: 650px) {
+    .meals {
+        transform: translate(-50%, 0);
+        top: unset;
+        bottom: 10%;
+        width: 150%;
+    }
 }
