--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -49,7 +49,7 @@
 }
 
 .item.all_menu {
-    padding: 1.4rem;
+    padding: 1.4rem 1.1rem;
 }
 
 .item:hover {
@@ -59,6 +59,7 @@
 .top_menu_bar {
     display: flex;
     justify-content: space-between;
+    position: relative;
 }
 
 .top_menu_bar :is(.left, .right) {
@@ -69,18 +70,43 @@
     display: flex;
 }
 
+.top_menu_bar > .title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 2.2rem;
+    display: none;
+    display: block;
+}
+
+.top_menu_bar .left .title {
+    font-size: 2rem;
+    display: none;
+    align-items: center;
+}
+
 @media screen and (min-width: 0px) and (max-width: 720px) {
     .header {
         padding: .5rem;
     }
     
-    .top_menu_bar .left .item {
-        display: none;
+    .top_menu_bar .right .item,
+    .top_menu_bar .home {
+        display: none !important;
     }
 
-    .top_menu_bar .right {
+    .top_menu_bar .left {
         width: 100%;
         justify-content: space-between;
+    }
+
+    .top_menu_bar > .title {
+        display: none;
+    }
+    
+    .top_menu_bar .left .title {
+        display: flex;
     }
 }
 
