--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -5,7 +5,7 @@
     flex-direction:column;
     justify-content:center;
     align-items:center;
-    padding: 1rem;
+    padding: .5rem;
 }
 
 .quick_menu_list {
