--- a/styles/globals.css
+++ b/styles/globals.css
@@ -96,7 +96,6 @@ html {
     font-size: var(--scale);
     height: 100%;
     scroll-behavior: smooth;
-    overflow: overlay;
     scroll-snap-type: y proximity;
 }
 
@@ -110,6 +109,36 @@ body {
     line-height: 1.2;
     font-family: NotoSans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+body, .scroll_bar, .modal--content {
+    overflow: overlay !important;
+}
+
+:is(
+    body,
+    .scroll-bar
+)::-webkit-scrollbar {
+    width: 2rem;
+}
+
+.modal--content::-webkit-scrollbar {
+    width: .4rem;
+}
+
+:is(
+    body,
+    .scroll-bar,
+    .modal--content
+)::-webkit-scrollbar-thumb {
+    background-color: var(--text-level-1);
+    border-radius: 1rem;
+    border: .8rem solid transparent;
+    background-clip: padding-box;
+}
+
+.modal--content::-webkit-scrollbar-thumb {
+    border: 0;
 }
 
 @font-face {
@@ -777,7 +806,7 @@ label, summary{
 @media screen and (min-width: 0px) and (max-width: 800px) {
     .modal {
         max-width: calc(100% - 1rem) !important;
-        min-width: 40rem !important;
+        min-width: 0 !important;
         width: 100% !important;
     }
 }
@@ -789,6 +818,33 @@ label, summary{
     to {
         transform: scale(1);
     }
+}
+
+.modal--menu {
+    display: flex;
+}
+
+.modal--menu li {
+    padding: 1rem;
+    flex: 1;
+    transition: .25s;
+    cursor: pointer;
+}
+
+.modal--menu li:first-child {
+    border-radius: 1rem 0 0 1rem;
+}
+
+.modal--menu li:last-child {
+    border-radius: 0 1rem 1rem 0;
+}
+
+.modal--menu li:hover {
+    background-color: var(--hover);
+}
+
+.modal--menu li.active {
+    background-color: var(--level-2);
 }
 
 .modal--content {
