FIX: 사이드 메뉴바 자동으로 안닫히는 버그

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -261,6 +261,10 @@ label, summary{
     max-width: 100rem;
 }
 
+.container._120 {
+    max-width: 120rem;
+}
+
 .container .title {
     margin-top: 5rem;
     margin-left: 2.5rem;
